// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationCardList/ViolationCardListControls/ShowViolationsButton VehicleWithNoViolationsListVisible smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12 page-content-container">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violation-card-list-wrapper">
                <div class="violation-card-list-controls">
                  <div class="row">
                    <div class="d-grid gap-2">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="true"
                              class="btn btn-block btn-outline-secondary"
                              disabled
                              type="button"
                      >
                        no violations
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationCardList/ViolationCardListControls/ShowViolationsButton VehicleWithViolationsListNotVisible smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12 page-content-container">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violation-card-list-wrapper">
                <div class="violation-card-list-controls">
                  <div class="row">
                    <div class="d-grid gap-2">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="false"
                              class="btn btn-block btn-outline-primary"
                              type="button"
                      >
                        show 3 violations
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationCardList/ViolationCardListControls/ShowViolationsButton VehicleWithViolationsListVisible smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12 page-content-container">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violation-card-list-wrapper">
                <div class="violation-card-list-controls">
                  <div class="row">
                    <div class="d-grid gap-2">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="true"
                              class="btn btn-block btn-outline-primary"
                              type="button"
                      >
                        hide violations
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
